spectec/test/elab/neg/parse-syntax-empty-body.t
  $ ./main.exe parse-syntax-empty-body.spectec 2>&1
  error[parse/syntax-empty-body]: empty type
    --> parse-syntax-empty-body.spectec:3:13
    |
  3 | syntax foo =
    |             ^
    = source: parse
  [1]
